Improved SEO and overall accessiblity. It includes the addition of 'robots.txt' and a meta description to enhance search engine visibility. Accessibility updates were made to 'NavigationBtns' and 'ProductThumbsList', ensuring proper structure and roles within 'role="tablist"' containers by adding 'role="presentation"' to '<li>' attributes, an element with role="tab" has to be the direct children of an element with role="tablist", so this just removes the '<li>' role but still keeps the HTML structure. For 'ProductImgsList', accessibility compliance was ensured by adding '<div>' containers to '<img>' tags with the proper accessibility attributes, as an '<img>' tag cannot have a role="tab" attribute. The cart button '<div>' was optimized by removing redundant 'aria-label' and adding a visually hidden '<p>' tag to announce the cart product quantity to screen reader users. Additionally, links in the FAQs section now feature descriptive 'aria-labels' for improved accessibility throughout the application.

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -123,15 +123,16 @@
   margin: 0 auto;
   padding: var(--base-desktop-padding);
   display: flex;
-  gap: 10px;
+  gap: 12px;
   list-style: none;
   line-height: 0;
 }
 
+
 .hero-slider__navigation-btn {
   background-color: #ffffff5f;
-  width: 12px;
-  height: 12px;
+  width: 13px;
+  height: 13px;
   border-radius: 50%;
 }
 
@@ -329,6 +330,11 @@
     padding: var(--base-mobile-padding);
   }
 
+  .hero-slider__navigation-btn {
+    width: 12px;
+    height: 12px;
+  }
+  
   .hero-slider__hero-text {
     padding: var(--base-mobile-padding)
   }
