--- a/src/styles/productDetails.css
+++ b/src/styles/productDetails.css
@@ -96,13 +96,18 @@
   align-self: start;
 }
 
-.product-image {
+.product-image-container {
   width: 100%;
   height: 100%;
-  transition: translate var(--base-transition-duration) ease-in-out;
-  object-fit: cover;
   flex-shrink: 0;
   flex-grow: 0;
+  transition: translate var(--base-transition-duration) ease-in-out;
+}
+
+.product-image {
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 
 .slider-controls {
